bugfix: wrapping text next to images didn't work in IE7

--- a/src/scss/layouts/bmg.scss
+++ b/src/scss/layouts/bmg.scss
@@ -254,6 +254,12 @@ $viewport-element-outer-height: 82px;
           max-width: 100%;
         }
       }
+
+      .timeline_text {
+        p {
+          max-width: none;
+        }
+      }
     }
   }
 
